# astrohud

./: Cargo.toml  LICENSE  Makefile  README.md  find_pictures.sh
astrohud-client/: Cargo.toml
astrohud-client/src/: cli.rs  main.rs
astrohud-rest/: Cargo.toml
astrohud-rest/src/: app_state.rs  cli.rs  lib.rs  main.rs  routes.rs  websocket.rs
astrohud-rest/static/: astroview_wasm.d.ts  astroview_wasm.js  astroview_wasm_bg.wasm  astroview_wasm_bg.wasm.d.ts  index.html  package.json  rt.html  wasm_index.html
astroview_wasm/: Cargo.toml
astroview_wasm/src/: lib.rs
