[package]
name = "astrohud-rest"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4"
actix-files = "0.6"
bytes = "1.10"  # For handling binary data
derive = "1.0.0"
features = "0.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
infer = "0.19"  # handle "infer" different image types 